# embedded_vision_platform

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
inc/: DisplayBuffer.h  DisplayBuffer_Earth3D.h  DisplayBuffer_PPI.h  DisplayHandler.h  NMEAGPS.h  Property.h  TImage.h  ThreadSafeQueue.h  Utilities.h  logger.h  serial_support.h  ubitGPS.h
src/: .main.cpp.swp  DisplayBuffer.cpp  DisplayBuffer_Earth3D.cpp  DisplayBuffer_PPI.cpp  DisplayHandler.cpp  NMEAGPS.cpp  Utilities.cpp  logger.cpp
src/cuda/: display_cuda.cu
src/cuda/deviceQuery/: .deviceQuery.cpp.swp
src/impl/: CMakeLists.txt
src/impl/list_ports/: list_ports_linux.cc  list_ports_osx.cc  list_ports_win.cc
unit_tests/: CMakeLists.txt  Earth3DUnitTest.cpp
unit_tests/asio_serial/: CMakeLists.txt  main.cpp
unit_tests/serial_support/: CMakeLists.txt  main.cpp
unit_tests/ubitGPS/: CMakeLists.txt  main.cpp
